<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/app_bg_color"
    tools:context=".view.MainActivity">

    <RelativeLayout
        android:id="@+id/splash_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <ImageView
            android:id="@+id/splash_logo_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/splash_screen_image"
            android:src="@drawable/logo_splash" />

        <ImageView
            android:id="@+id/splash_watermark_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/splash_screen_image"
            android:src="@drawable/wordmark_splash" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <SearchView
            android:id="@+id/search_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="Units"
            android:iconifiedByDefault="false"
            android:queryHint="@string/enter_search_terms_here"
            android:searchHintIcon="@null"
            android:searchIcon="@null" />

        <View
            android:id="@+id/search_bottom_view"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/search_text"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/grey" />

        <LinearLayout
            android:id="@+id/sample_search_hint_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_bottom_view"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginTop="100dp"
                android:contentDescription="@string/search_placeholder"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:src="@drawable/search_placeholder" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/type_to_start_searching_for"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/units_activity_status"
                android:textAlignment="center"
                android:textColor="@color/yellow" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_not_found_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_bottom_view"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginTop="100dp"
                android:contentDescription="@string/search_placeholder"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:src="@drawable/not_found_placeholder" />

            <TextView
                android:id="@+id/term_not_found"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/term_not_found"
                android:textAlignment="center"
                android:textColor="@color/yellow" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/search_bottom_view"
            android:orientation="vertical"
            android:visibility="gone">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/search_tabs"
                android:layout_width="match_parent"
                app:tabTextColor="@android:color/white"
                android:layout_height="wrap_content" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/search_viewpager_adapter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>